Completed Cart Design And Calculate Cart Item

--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -35,4 +35,9 @@
     position: absolute;
     bottom: 0;
     cursor: pointer;
+    font-weight: bolder;
+}
+
+.btn-cart:hover {
+    background-color: orange;
 }
