--- a/src/components/Shops/Shop.css
+++ b/src/components/Shops/Shop.css
@@ -7,9 +7,12 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 45px;
-    padding: 20px;
+    margin-top: 100px;
 }
 
+.cart-container{
+    background-color: rgba(255, 153, 0, 0.3);
+}
 @media screen and (max-width: 600px) {
     .products-container{
         display: grid;
